Remove unused Cyclone configuration

--- a/ford_fusion_2016/carma.env
+++ b/ford_fusion_2016/carma.env
@@ -11,7 +11,7 @@ export RCUTILS_CONSOLE_OUTPUT_FORMAT='{time} | {severity} | {name} | {function_n
 export ROS_LOG_DIR="/opt/carma/logs" # Variable used in both ROS 1 and ROS 2
 
 # configuration for CycloneDDS
-export CYCLONEDDS_URI=/opt/carma/vehicle/calibration/telematics/cyclone_config.xml
+# export CYCLONEDDS_URI=/opt/carma/vehicle/calibration/telematics/cyclone_config.xml
 
 ###
 # Namespaces
